# serializer version: 1
# name: test_hvac_device_state[tests/homes/hvac-cooling.yaml]
  tuple(
    'cool',
    ReadOnlyDict({
      'current_temperature': 25,
      'fan_mode': None,
      'fan_modes': list([
        'low',
        'high',
        'off',
      ]),
      'friendly_name': 'Family Room',
      'hvac_action': 'cooling',
      'hvac_modes': list([
        'off',
        'cool',
        'heat',
        'auto',
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'supported_features': <ClimateEntityFeature.TARGET_TEMPERATURE_RANGE|FAN_MODE|TURN_OFF|TURN_ON: 394>,
      'target_temp_high': None,
      'target_temp_low': None,
    }),
  )
# ---
# name: test_hvac_device_state[tests/homes/hvac-off.yaml]
  tuple(
    'off',
    ReadOnlyDict({
      'current_temperature': 22,
      'fan_mode': None,
      'fan_modes': list([
        'low',
        'high',
        'off',
      ]),
      'friendly_name': 'Family Room',
      'hvac_action': 'off',
      'hvac_modes': list([
        'off',
        'cool',
        'heat',
        'auto',
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'supported_features': <ClimateEntityFeature.TARGET_TEMPERATURE_RANGE|FAN_MODE|TURN_OFF|TURN_ON: 394>,
      'target_temp_high': None,
      'target_temp_low': None,
    }),
  )
# ---
# name: test_hvac_device_state[tests/homes/hvac-very-low.yaml]
  tuple(
    'cool',
    ReadOnlyDict({
      'current_temperature': 25,
      'fan_mode': None,
      'fan_modes': list([
        'low',
        'high',
        'off',
      ]),
      'friendly_name': 'Family Room',
      'hvac_action': 'cooling',
      'hvac_modes': list([
        'off',
        'cool',
        'heat',
        'auto',
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'supported_features': <ClimateEntityFeature.TARGET_TEMPERATURE_RANGE|FAN_MODE|TURN_OFF|TURN_ON: 394>,
      'target_temp_high': None,
      'target_temp_low': None,
    }),
  )
# ---
